compiler/testData/diagnostics/tests/enum/enumWithAnnotationKeyword.kt
data <!WRONG_ANNOTATION_TARGET!>annotation<!> enum class E {
    D
}